--- a/05_JavaScript_Advanced/08_DomIntroduction_Exercise/07_style.css
+++ b/05_JavaScript_Advanced/08_DomIntroduction_Exercise/07_style.css
@@ -15,7 +15,7 @@
     color: #aaa;
 }
 body{
-    background-image: url(./softuni-wallpaper-1-1920x1080.jpg);
+    background-image: url(07_softuni-wallpaper-1-1920x1080.jpg);
     background-position: top;
 }
 
