--- a/06_JavaScript_Applications/04_Asynchronous_Programming_Exercise/03.Forecaster/styles.css
+++ b/06_JavaScript_Applications/04_Asynchronous_Programming_Exercise/03.Forecaster/styles.css
@@ -39,7 +39,7 @@ div.forecast-info {
     display: inline-block;
 }
 
-.symbol {
+.condition-symbol {
     font-size: 4em;
     display: inline-block;
 }
