--- a/08_JavaScrtip_BackEnd/04_Workshops/views/catalog.hbs
+++ b/08_JavaScrtip_BackEnd/04_Workshops/views/catalog.hbs
@@ -3,7 +3,7 @@
     <h1 class="item">Accomodation</h1>
 
     
-    <main class="item pad-large align-center">
+    {{!-- <main class="item pad-large align-center">
         <form class="layout left large" method="get">
             <div class="col">
                 <label><span>Location</span><input name="city" value="{{city}}"></label>
@@ -17,7 +17,7 @@
             </div>
             <input class="action" type="submit" value="Search">
         </form>
-    </main>
+    </main> --}}
     
 
     {{#if rooms}}
