--- a/08_JavaScrtip_BackEnd/04_Workshops/views/details.hbs
+++ b/08_JavaScrtip_BackEnd/04_Workshops/views/details.hbs
@@ -26,11 +26,11 @@
                         {{/each}}
                     </ul>
 
-                    {{#if isOwner}}
+                    {{!-- {{#if isOwner}} --}}
                     <a class="action" href="/room/{{_id}}/edit">Edit</a>
                     <a class="action" href="/facility/{{_id}}/decorateRoom">Facilities</a>
                     <a class="action" href="/room/{{_id}}/delete">Delete</a>
-                    {{/if}}
+                    {{!-- {{/if}} --}}
                 </div>
 
             </div>
