--- a/08_JavaScrtip_BackEnd/04_Workshops/views/decorate.hbs
+++ b/08_JavaScrtip_BackEnd/04_Workshops/views/decorate.hbs
@@ -1,30 +1,21 @@
 <section id="decorate-section">
     <h1 class="item">{{room.name}}</h1>
     <div class="item padded">
-
         <main class="layout right large">
-
             <div class="col">
-
                 <img src="{{room.imgUrl}}" class="img-large">
-
             </div>
-
             <div class="content pad-med">
-
                 <p>Facilities:</p>
                 <form action="/facility/{{room._id}}/decorateRoom" method="post">
                     <ul class="catalog">
                         {{#each facilities}}
-                        <li>
-                            <label>
-                                <input type="checkbox" name="{{_id}}" id=""> {{label}} <img class="facility-icon"
-                                    src="{{iconUrl}}" alt="">
-                            </label>
-                        </li>
+                        <li><label><input type="checkbox" name="{{_id}}"> {{label}} <img class="facility-icon"
+                        <li><label><input type="checkbox" name="{{_id}}" {{#if checked}}checked{{/if}}> {{label}} <img class="facility-icon"
+                                    src="{{iconUrl}}"></label></li>
                         {{/each}}
                     </ul>
-                    <button class = "action cta">Confirm facilities</button>
+                    <button class="action cta">Confirm Facilities</button>
                 </form>
             </div>
         </main>
