--- a/09_JavaScript_Angular/07_Routing/routing/src/app/app.component.html
+++ b/09_JavaScript_Angular/07_Routing/routing/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-global-loader></app-global-loader>
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
+<app-standalone-cmp [showValue]="true"></app-standalone-cmp>
